--- a/Site/Login e cadastro/css/styles.css
+++ b/Site/Login e cadastro/css/styles.css
@@ -20,10 +20,73 @@ body{
     height: 100vh;
     background-image: url(../assets/imgs/fundo.svg);
     background-repeat: no-repeat;
+    background-size: cover;
     justify-content: center;
     align-items: center;
 }
 
+header {
+    position: fixed;
+    background-color: #ffffffff;
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 40px;
+    top: 0px;
+    width: 100%;
+    height: 10%;
+    align-items: center;
+    z-index: 999;
+    box-shadow: #2a2a2a1d 10px 10px 10px 10px;
+  }
+  
+  header a img {
+    width: 70%;
+    height: auto;
+    background-color: #D9D9D9;
+    border-radius: 10px;
+  }
+  
+  nav {
+    display: flex;
+    width: 45%;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 3%;
+  }
+  
+  .nav_um ul {
+    display: flex;
+    gap: 10%;
+    align-items: center;
+  }
+  
+  .nav_dois ul {
+    display: flex;
+    gap: 10%;
+    align-items: center;
+  }
+  
+  .nav_um ul li {
+    background-color: #D9D9D9;
+    padding: 5%;
+    padding-left: 8%;
+    padding-right: 8%;
+    border-radius: 10px;
+  }
+  
+  .nav_dois ul li {
+    background-color: #D9D9D9;
+    padding: 5%;
+    padding-left: 8%;
+    padding-right: 8%;
+    border-radius: 10px;
+  }
+  
+  .nav_dois ul li a,
+  .nav_um ul li a {
+    font-family: "Keania One";
+    color: black;
+  }
 .container {
     display: flex;
     justify-content: center;
