--- a/Site/Institucional/css/styles_newpost.css
+++ b/Site/Institucional/css/styles_newpost.css
@@ -66,7 +66,6 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #D9D9D9;
     padding: 1.5%;    
     border-radius: 10px;
 }
@@ -98,7 +97,7 @@ nav {
 }
 
 .card {
-    height: 72%;
+    height: 85%;
     width: 25%;
     display: flex;
     flex-direction: column;
@@ -141,8 +140,9 @@ nav {
 }
 
 .add_arquivo .imagem img {
-    width:  45%;
+    width:  70%;
     height: auto;
+    object-fit: cover;
 }
 
 .add_arquivo .txt_add_arquivo {
