--- a/Site/Login e cadastro/css/styles.css
+++ b/Site/Login e cadastro/css/styles.css
@@ -18,7 +18,7 @@ body {
   margin: auto;
   max-width: 1900px;
   height: 100vh;
-  background-image: url(../assets/imgs/fundo.svg);
+  background-image: url(../assets/imgs/fundo.png);
   background-repeat: no-repeat;
   background-size: cover;
   justify-content: center;
