--- a/Minha API/public/css/styles_login_cadastro.css
+++ b/Minha API/public/css/styles_login_cadastro.css
@@ -49,36 +49,48 @@ header a img {
 nav {
   display: flex;
   width: 45%;
-  justify-content: space-between;
   align-items: center;
   margin-right: 3%;
+  justify-content: space-between;
 }
 
 .nav_um ul {
+  width: auto;
+  height: 100%;
   display: flex;
   gap: 10%;
   align-items: center;
+  padding-top: 10%;
+  padding-bottom: 10%;
 }
 
 .nav_dois ul {
+  width: auto;
+  height: 100%;
   display: flex;
   gap: 10%;
   align-items: center;
+  padding-top: 10%;
+  padding-bottom: 10%;
 }
 
 .nav_um ul li {
+  width: auto;
+  height: 100%;
   background-color: #D9D9D9;
-  padding: 5%;
-  padding-left: 8%;
-  padding-right: 8%;
+  padding: 10%;
+  padding-left: 15%;
+  padding-right: 15%;
   border-radius: 10px;
 }
 
 .nav_dois ul li {
+  width: auto;
+  height: 100%;
   background-color: #D9D9D9;
-  padding: 5%;
-  padding-left: 8%;
-  padding-right: 8%;
+  padding: 20%;
+  padding-left: 15%;
+  padding-right: 15%;
   border-radius: 10px;
 }
 
@@ -105,6 +117,8 @@ nav {
   align-items: center;
   border-radius: 15px;
   box-shadow: #2a2a2a6b 0px 7px 7px 7px;
+  color: #ffffffff;
+  margin-top: 10%;
 }
 
 h1 {
@@ -148,4 +162,5 @@ button {
   margin-top: 10%;
   padding: 3%;
   cursor: pointer;
+  margin-bottom: 5%;
 }
