--- a/Minha API/public/site/css/styles_ex.css
+++ b/Minha API/public/site/css/styles_ex.css
@@ -103,6 +103,14 @@ body {
   border-radius: 10px;
 }
 
+.bar_sair button {
+  border: none;
+  background: none;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
 .container {
   width: 100%;
   height: 100%;
@@ -163,4 +171,10 @@ body {
 .desc_post {
   padding: 10px;
   border-bottom: #2A2A2A solid 3px;
+}
+
+.desc_txt {
+  font-family: Arial, Helvetica, sans-serif;
+  word-wrap: break-word;
+  white-space: normal;
 }
