--- a/Minha API/public/css/styles_home.css
+++ b/Minha API/public/css/styles_home.css
@@ -33,7 +33,7 @@ header {
   height: 10%;
   align-items: center;
   z-index: 999;
-  border: 1px;
+  box-shadow: #2a2a2a1d 10px 10px 10px 10px;
 }
 
 header a img {
@@ -46,36 +46,48 @@ header a img {
 nav {
   display: flex;
   width: 45%;
-  justify-content: space-between;
   align-items: center;
   margin-right: 3%;
+  justify-content: space-between;
 }
 
 .nav_um ul {
+  width: auto;
+  height: 100%;
   display: flex;
   gap: 10%;
   align-items: center;
+  padding-top: 10%;
+  padding-bottom: 10%;
 }
 
 .nav_dois ul {
+  width: auto;
+  height: 100%;
   display: flex;
   gap: 10%;
   align-items: center;
+  padding-top: 10%;
+  padding-bottom: 10%;
 }
 
 .nav_um ul li {
+  width: auto;
+  height: 100%;
   background-color: #D9D9D9;
-  padding: 5%;
-  padding-left: 8%;
-  padding-right: 8%;
+  padding: 10%;
+  padding-left: 15%;
+  padding-right: 15%;
   border-radius: 10px;
 }
 
 .nav_dois ul li {
+  width: auto;
+  height: 100%;
   background-color: #D9D9D9;
-  padding: 5%;
-  padding-left: 8%;
-  padding-right: 8%;
+  padding: 20%;
+  padding-left: 15%;
+  padding-right: 15%;
   border-radius: 10px;
 }
 
