--- a/Minha API/public/css/styles_login_cadastro.css
+++ b/Minha API/public/css/styles_login_cadastro.css
@@ -112,7 +112,7 @@ nav {
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: #2A2A2A;
+  background-color: #121212;
   padding: 5%;
   align-items: center;
   border-radius: 15px;
