--- a/Minha API/public/site/css/styles_perfil.css
+++ b/Minha API/public/site/css/styles_perfil.css
@@ -122,8 +122,6 @@ body {
 }
 
 .superior {
-    position: fixed;
-    position: sticky;
     left: 0;
     width: 100%;
     height: 30%;
@@ -181,6 +179,8 @@ body {
 .descricao_do_perfil {
     font-family: Arial, Helvetica, sans-serif;
     color: #ffffffff;
+    word-wrap: break-word;
+    white-space: normal;
 }
 
 #input_nova_desc {
@@ -216,20 +216,29 @@ body {
 .exibicao_post {
     width: 100%;
     display: flex;
+    gap: 10px;
+}
+
+.exibicao {
+    background-color: #2A2A2A;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+
 }
 
 .post {
     margin-top: 20px;
-    margin-right: 10px;
     width: 300px;
     height: auto;
-    background-color: #121212;
+    background-color: #2A2A2A;
     color: #ffffff;
-    border-right: #121212 solid 5px;
+    border-radius: 10px;
 }
 
 .post .post_user {
-    font-family: "Sofia Sans";
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2rem;
     width: 100%;
     height: 20px;
@@ -258,6 +267,7 @@ body {
     width: 100%;
     height: auto;
 }
+
 .img_post video {
     object-fit: cover;
     width: 100%;
@@ -265,18 +275,17 @@ body {
 }
 
 .curtida {
-    width: 100px;
+    width: 100%;
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5%;
+    gap: 5px;
     color: #FD5560;
 }
 
-.curtida img {
-    width: 70px;
-    height: 55px;
+.botões_cc {
+    margin-left: 10px;
 }
 
 .curtida button {
@@ -286,15 +295,23 @@ body {
 }
 
 .curtida .qtd_curtida {
+    width: 100%;
+    display: flex;
     font-family: "Sofia Sans";
 }
 
 .desc_post {
+    margin-top: 5px;
     width: 300px;
     height: auto;
     padding-bottom: 5%;
     padding-left: 5%;
     padding-right: 5%;
+}
+
+.desc_post .desc_user {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.8rem;
 }
 
 .desc_txt {
@@ -305,5 +322,6 @@ body {
 }
 
 .cond_curtida img {
-    width: 60px;
+    width: 50px;
+    height: 40px;
 }
