--- a/Minha API/public/css/styles_home.css
+++ b/Minha API/public/css/styles_home.css
@@ -22,6 +22,26 @@ body {
   background-color: #ffffffff;
 }
 
+button {
+  transition: .3s;
+}
+
+button:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.nav_um ul li a,
+.nav_dois ul li a {
+  transition: .3s;
+}
+
+.nav_um ul li a:hover,
+.nav_dois ul li a:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
 header {
   position: fixed;
   background-color: #ffffffff;
@@ -182,8 +202,8 @@ nav {
   align-items: flex-start;
   justify-content: center;
   font-family: "Inter";
-  font-weight: bold;
-  font-size: 2rem;
+  font-weight: 500;
+  font-size: 1.2rem;
   background-color: #000;
   color: #ffffffff;
   width: 500px;
