--- a/Minha API/public/site/css/styles_ex.css
+++ b/Minha API/public/site/css/styles_ex.css
@@ -23,6 +23,26 @@ body {
 }
 
 button {
+  transition: .3s;
+}
+
+button:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.bar_nome_user a .div_nome_user,
+.bar_p_e a,
+.bar_new a,
+.bar_sair button {
+  transition: .3s;
+}
+
+.bar_nome_user a .div_nome_user:hover,
+.bar_p_e a:hover,
+.bar_new a:hover,
+.bar_sair button:hover {
+  transform: scale(1.1);
   cursor: pointer;
 }
 
@@ -311,6 +331,16 @@ button {
 .texto_dos_comentarios .nome_quem_comentou {
   margin-bottom: 3px;
   font-size: 0.9rem;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.nome_quem_comentou img {
+  width: 18px;
+  height: 18px;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
 .new_com {
