--- a/Minha API/public/site/css/styles_newpost.css
+++ b/Minha API/public/site/css/styles_newpost.css
@@ -22,6 +22,30 @@ body {
     background-color: #121212;
 }
 
+button {
+    transition: .3s;
+}
+
+button:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+.bar_nome_user a .div_nome_user,
+.bar_p_e a,
+.bar_new a,
+.bar_sair button {
+    transition: .3s;
+}
+
+.bar_nome_user a .div_nome_user:hover,
+.bar_p_e a:hover,
+.bar_new a:hover,
+.bar_sair button:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
 .bar_lateral {
     position: absolute;
     position: fixed;
