--- a/Minha API/public/site/css/styles_newpost.css
+++ b/Minha API/public/site/css/styles_newpost.css
@@ -74,12 +74,19 @@ button:hover {
 }
 
 .bar_nome_user a .div_nome_user {
+    width: 100%;
+    height: auto;
     color: #ffffffff;
     font-size: 1.2rem;
     font-weight: 500;
     cursor: pointer;
     margin-top: 50px;
-    font-family: Arial, Helvetica, sans-serif;
+    word-wrap: break-word;
+    word-break: break-all;
+    white-space: normal;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .bar_p_e a,
@@ -140,7 +147,7 @@ button:hover {
 .container {
     height: 100%;
     width: 100%;
-    padding-left: 200px;
+    padding-left: 220px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -150,13 +157,13 @@ button:hover {
 }
 
 .card {
-    height: 85%;
-    width: 35%;
+    height: 80%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 23%;
+
     position: relative;
 }
 
@@ -249,9 +256,8 @@ button:hover {
 }
 
 .desc textarea {
-    max-width: 100%;
-    max-height: 120px;
     width: 100%;
+    height: 120px;
     background-color: #121212;
     height: 85%;
     padding: 5%;
@@ -261,8 +267,8 @@ button:hover {
 }
 
 .botao_enviar {
+    width: 10%;
     height: 100%;
-    width: 25%;
     display: flex;
     align-items: flex-end;
 }
@@ -282,4 +288,15 @@ button:hover {
     color: red;
     font-size: 1.2rem;
     font-weight: bold;
+}
+
+.botões_cc {
+    display: flex;
+}
+
+.opcional-texto {
+    font-size: 0.85rem;
+    color: #666;
+    margin-top: 5px;
+    font-style: italic;
 }
