--- a/Minha API/public/site/css/styles_ex.css
+++ b/Minha API/public/site/css/styles_ex.css
@@ -34,16 +34,18 @@ button:hover {
 .bar_nome_user a .div_nome_user,
 .bar_p_e a,
 .bar_new a,
+.bar_e a,
 .bar_sair button {
-  transition: .3s;
+    transition: .3s;
 }
 
 .bar_nome_user a .div_nome_user:hover,
 .bar_p_e a:hover,
 .bar_new a:hover,
+.bar_e a:hover,
 .bar_sair button:hover {
-  transform: scale(1.1);
-  cursor: pointer;
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
 .bar_lateral {
