--- a/Minha API/public/site/css/styles_perfil.css
+++ b/Minha API/public/site/css/styles_perfil.css
@@ -6,7 +6,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Keania One";
     text-decoration: none;
     list-style: none;
 }
@@ -35,6 +34,7 @@ button:hover {
 .bar_nome_user a .div_nome_user,
 .bar_p_e a,
 .bar_new a,
+.bar_e a,
 .bar_sair button {
     transition: .3s;
 }
@@ -42,6 +42,7 @@ button:hover {
 .bar_nome_user a .div_nome_user:hover,
 .bar_p_e a:hover,
 .bar_new a:hover,
+.bar_e a:hover,
 .bar_sair button:hover {
     transform: scale(1.1);
     cursor: pointer;
@@ -151,6 +152,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .superior {
@@ -159,7 +161,7 @@ button:hover {
     height: 30%;
     padding-bottom: 5%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     color: #ffffff;
 }
 
@@ -189,26 +191,58 @@ button:hover {
 }
 
 .info_perfil {
+    width: 400px;
     display: flex;
     flex-direction: column;
     gap: 5%;
 }
 
-.botao_editar {
+.nome_do_usuario {
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+button {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+}
+
+.botao_editar {
+    width: 80px;
+    
     height: auto;
 }
 
 .botao_editar button {
-    background-color: #fff;
+     background-color: #fff;
     border: none;
     color: #121212;
-    padding: 3%;
+    padding: 6%;
     border-radius: 10px;
     cursor: pointer;
 }
 
+.div_editar {
+    width: 430px;
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.div_editar button {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.div_editar input {
+    width: 200px;
+}
 .descricao_do_perfil {
+    border-top: gray solid 2px;
+    padding-top: 10px;
     font-family: Arial, Helvetica, sans-serif;
     color: #ffffffff;
     word-wrap: break-word;
@@ -237,6 +271,7 @@ button:hover {
 .titulo_postagens {
     width: 100%;
     font-size: 1.5rem;
+    font-weight: 600;
     padding: 2%;
     display: flex;
     justify-content: center;
@@ -251,38 +286,50 @@ button:hover {
     gap: 10px;
     flex-wrap: wrap;
     justify-content: center;
+
 }
 
 .exibicao {
     display: flex;
-    justify-content: center;
-    border-radius: 10px;
-    height: auto;
-
+    flex-direction: column;
+    width: 800px;
+    padding-top: 15px;
+    margin-bottom: 30px;
+    align-items: center;
+    background-color: #2A2A2A;
+    border-radius: 15px;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
 }
 
 .post {
+    width: 800px;
     display: flex;
     flex-direction: column;
-    background-color: #2A2A2A;
-    color: #fff;
-    border-radius: 15px;
-    padding: 15px;
-    margin-bottom: 20px;
 }
 
-.post .post_user {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.2rem;
-    width: 100%;
-    min-height: 20px;
-    word-wrap: break-word;
-    word-break: break-all;
-    white-space: normal;
-    padding-left: 10px;
+.img_post img {
+
+    width: 800px;
+    height: auto;
+    margin-top: 10px;
+    object-fit: cover;
+}
+
+.img_post video {
+    width: 800px;
+    height: auto;
+    margin-top: 10px;
+    object-fit: cover;
+}
+
+.post_user {
+    font-size: 1.3rem;
     display: flex;
     align-items: center;
     gap: 10px;
+    margin-left: 15px;
 }
 
 .post_user img {
@@ -292,67 +339,57 @@ button:hover {
     border-radius: 50%;
 }
 
-.post .img_post {
-    width: 100%;
-    margin-top: 20px;
-    height: auto;
-
-}
-
-.post img,
-.post video {
-  max-width: 100%;
-  max-height: 385px;
-  height: auto;
-  border-radius: 10px;
-  margin-top: 10px;
-  object-fit: cover;
+.botões_cc {
+    display: flex;
+    gap: 5%;
+    align-items: center;
+    margin-top: 5px;
 }
 
 .curtida {
-    width: 100%;
+    width: 150px;
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5px;
+    gap: 5%;
     color: #FD5560;
 }
 
-.botões_cc {
-    margin-top: 10px;
-    margin-left: 5px;
+.qtd_curtida {
+    display: flex;
 }
 
-.botões_cvi {
-    margin-top: -5px;
-    margin-left: 5px;
+.curtida img {
+    width: 70px;
+    height: 60px;
 }
 
 .curtida button {
-    border: none;
     background: none;
-    cursor: pointer;
+    border: none;
 }
 
-.curtida .qtd_curtida {
-    width: 100%;
+.comentario {
+    width: 100px;
+    height: 50px;
     display: flex;
-    font-family: "Sofia Sans";
+    justify-content: center;
+    align-items: center;
+}
+
+.comentarios button {
+    border: none;
+}
+
+.comentarios img {
+    width: 60px;
 }
 
 .desc_post {
-    margin-top: 5px;
-    width: 300px;
-    height: auto;
-    padding-bottom: 5%;
-    padding-left: 5%;
-    padding-right: 5%;
-}
-
-.desc_post .desc_user {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.8rem;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
 }
 
 .desc_txt {
@@ -362,7 +399,109 @@ button:hover {
     white-space: normal;
 }
 
-.cond_curtida img {
-    width: 50px;
-    height: 40px;
+.adicionar_comentario {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.titulo_comentario1 {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-top: gray solid 1px;
+    padding-top: 10px;
+}
+
+.titulo_comentario1 img {
+    width: 35px;
+}
+
+.titulo_comentario {
+    width: 100%;
+    margin-right: 30px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.adicionar_comentario textarea {
+    display: flex;
+    text-align: start;
+    min-width: 600px;
+    max-width: 600px;
+    background: none;
+    border: none;
+    height: 30px;
+    color: #ffffffff;
+    resize: none;
+    padding: 2px;
+}
+
+.adicionar_comentario button {
+    width: 30px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+.adicionar_comentario button img {
+    width: 20px;
+}
+
+.todos_com {
+    width: 800px;
+    margin-top: 10px;
+}
+
+.texto_dos_comentarios {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    background-color: rgb(53, 52, 52);
+    border-radius: 10px;
+}
+
+.texto_comentario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+}
+
+.texto_dos_comentarios .nome_quem_comentou {
+    margin-bottom: 3px;
+    font-size: 0.9rem;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.nome_quem_comentou img {
+    width: 18px;
+    height: 18px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.new_com {
+    font-size: 1rem;
+    margin-left: 5px;
+    word-wrap: break-word;
+    white-space: normal;
+}
+
+button {
+    background: none;
+    border: none;
 }
