--- a/Minha API/public/site/css/styles_dash.css
+++ b/Minha API/public/site/css/styles_dash.css
@@ -158,16 +158,17 @@ button:hover {
 }
 
 .titulo {
-    margin-top: 30px;
+    margin-top: 40px;
     padding: 30px;
     width: 1100px;
-    height: 150px;
+    height: 100px;
     color: #121212;
     border-radius: 20px;
     box-shadow: rgba(137, 137, 137, 0.279) 0px 0px 10px 10px;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
+    align-items: center;
+
 }
 
 .titulo .nome_user {
@@ -177,9 +178,9 @@ button:hover {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-around;
     font-weight: 700;
-    font-size: 2rem;
+    font-size: 3rem;
     margin-bottom: 10px;
     gap: 20px;
     padding: 10px;
@@ -187,7 +188,7 @@ button:hover {
 }
 
 .card_estatiscas {
-    margin-top: 40px;
+    margin-top: 30px;
     width: 1100px;
     height: 180px;
     display: flex;
@@ -273,6 +274,7 @@ button:hover {
     font-weight: 400;
     font-size: 0.9rem;
     font-family: sans-serif;
+    text-shadow: 1px 1px 1px #00000099;
 }
 
 .status_qtd span {
@@ -287,15 +289,14 @@ button:hover {
 
 .status_qtd img {
     width: 20px;
-
 }
 
 .grafico {
     width: 1100px;
-    height: auto;
-    background-color: aliceblue;
+    height: 330px;
+    background-color: #ffffffff;
     color: #121212;
-    margin-top: 40px;
+    margin-top: 20px;
     padding: 20px;
     border-radius: 15px;
     box-shadow: rgba(137, 137, 137, 0.279) 0px 0px 10px 10px;
@@ -304,4 +305,12 @@ button:hover {
 .grafico .titulo_grafico {
     width: 100%;
     font-size: 2rem;
+    margin-left: 30px;
+    margin-bottom: 10px;
+}
+
+.grafico_chart {
+    width: 100%;
+    /* ou 100%, auto, etc. */
+    height: 100%;
 }
