--- a/Minha API/public/site/css/styles_perfil.css
+++ b/Minha API/public/site/css/styles_perfil.css
@@ -158,10 +158,11 @@ button:hover {
 .superior {
     left: 0;
     width: 100%;
-    height: 30%;
-    padding-bottom: 5%;
+    height: 100%;
+    padding-bottom: 2%;
     display: flex;
     justify-content: flex-start;
+    align-items: flex-start;
     color: #ffffff;
 }
 
@@ -203,6 +204,8 @@ button:hover {
     display: flex;
     gap: 20px;
     align-items: center;
+    justify-content: space-between;
+    border-bottom: gray solid 2px;
 }
 
 button {
@@ -212,17 +215,18 @@ button {
 
 .botao_editar {
     width: 80px;
-    
     height: auto;
+    border-bottom: #121212 solid 5px;
 }
 
 .botao_editar button {
-     background-color: #fff;
+    background-color: #fff;
     border: none;
     color: #121212;
     padding: 6%;
     border-radius: 10px;
     cursor: pointer;
+
 }
 
 .div_editar {
@@ -240,8 +244,8 @@ button {
 .div_editar input {
     width: 200px;
 }
+
 .descricao_do_perfil {
-    border-top: gray solid 2px;
     padding-top: 10px;
     font-family: Arial, Helvetica, sans-serif;
     color: #ffffffff;
