--- a/Minha API/public/site/css/styles_perfil.css
+++ b/Minha API/public/site/css/styles_perfil.css
@@ -200,6 +200,7 @@ button:hover {
 
 .nome_do_usuario {
     width: 100%;
+    font-size: 1.2rem;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     gap: 20px;
