--- a/Minha API/public/site/css/styles_perfil.css
+++ b/Minha API/public/site/css/styles_perfil.css
@@ -156,22 +156,30 @@ button:hover {
 }
 
 .superior {
-    left: 0;
     width: 100%;
     height: 100%;
     padding-bottom: 2%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     color: #ffffff;
+    gap: 70px;
 }
 
 .imagem_perfil {
-    width: 40%;
-    height: 70%;
+    width: auto;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.imagem_perfil img {
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: #121212 solid 3px;
 }
 
 .imagem_perfilcss input {
@@ -408,7 +416,7 @@ button {
     margin-top: 10px;
     width: 100%;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     padding-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
@@ -424,7 +432,7 @@ button {
 }
 
 .titulo_comentario1 img {
-    width: 35px;
+    width: 40px;
 }
 
 .titulo_comentario {
@@ -454,7 +462,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 .adicionar_comentario button img {
