--- a/Minha API/public/css/styles_home.css
+++ b/Minha API/public/css/styles_home.css
@@ -31,12 +31,19 @@ button:hover {
   cursor: pointer;
 }
 
-.nav_um ul li a,
-.nav_dois ul li a {
-  transition: .3s;
+.nav_dois ul li {
+  background-color: #D9D9D9;
+  padding: 10px 20px;
+  border-radius: 10px;
 }
 
-.nav_um ul li a:hover,
+.nav_dois ul li a {
+  display: block;
+  font-family: "Keania One";
+  color: black;
+  transition: 0.3s;
+}
+
 .nav_dois ul li a:hover {
   transform: scale(1.1);
   cursor: pointer;
@@ -46,7 +53,6 @@ header {
   position: fixed;
   background-color: #ffffffff;
   display: flex;
-  justify-content: space-between;
   padding: 0px 40px;
   top: 0px;
   width: 100%;
@@ -65,20 +71,10 @@ header a img {
 
 nav {
   display: flex;
-  width: 45%;
+  width: 90%;
   align-items: center;
-  margin-right: 3%;
-  justify-content: space-between;
-}
-
-.nav_um ul {
-  width: auto;
-  height: 100%;
-  display: flex;
-  gap: 10%;
-  align-items: center;
-  padding-top: 10%;
-  padding-bottom: 10%;
+  justify-content: flex-end;
+  margin-left: 10%;
 }
 
 .nav_dois ul {
@@ -89,26 +85,6 @@ nav {
   align-items: center;
   padding-top: 10%;
   padding-bottom: 10%;
-}
-
-.nav_um ul li {
-  width: auto;
-  height: 100%;
-  background-color: #D9D9D9;
-  padding: 10%;
-  padding-left: 15%;
-  padding-right: 15%;
-  border-radius: 10px;
-}
-
-.nav_dois ul li {
-  width: auto;
-  height: 100%;
-  background-color: #D9D9D9;
-  padding: 20%;
-  padding-left: 15%;
-  padding-right: 15%;
-  border-radius: 10px;
 }
 
 .nav_dois ul li a,
